--- a/src/app/pages/signin/signin.component.html
+++ b/src/app/pages/signin/signin.component.html
@@ -4,25 +4,30 @@
         <a href="https://realprogress.pl/"><img class="site-logo__img" src="assets/real-progress-logo.svg" alt="Real Progress"></a>
     </div>
 
-        <form class="login-page__form" action="/redirect">
+        <form [formGroup]="form" class="login-page__form" action="/redirect">
             <mat-form-field>
-                <mat-label></mat-label>
-                <input class="login-page__field" matInput type="email" placeholder="Twój email:">
+                <mat-label>Email:</mat-label>
+                <input class="login-page__field" matInput type="email" placeholder="Twój email" formControlName="email">
+                <mat-error *ngIf="form.get('email')!.hasError('required')">
+                    Email jest wymagany
+                </mat-error>
+                <mat-error *ngIf="form.get('email')!.hasError('email')">
+                    Email jest niepoprawny
+                </mat-error>
             </mat-form-field>
 
             <mat-form-field>
-                <mat-label></mat-label>
-            <input class="login-page__field" matInput type="password" placeholder="Twoje hasło">
+                <mat-label>Hasło:</mat-label>
+            <input class="login-page__field" matInput type="password" placeholder="Twoje hasło" formControlName="password">
+            <mat-error *ngIf="form.get('password')!.hasError('required')">
+                Hasło jest wymagane
+            </mat-error>
             </mat-form-field>
-
-            <!-- <label class="login-page__label">Email:</label>ss
-
-            <label class="login-page__label">Hasło:</label> -->
 
             <div class="login-page__btn-container">
-                <button class="primary-btn">Login</button>
+                <button class="primary-btn" test-id="login-button" [disabled]="!form.valid">Login</button>
                 <button class="primary-btn primary-btn--red">Rejestracja</button>
-                <button class="primary-btn">Przywróć hasło</button>
+                <button class="primary-btn" test-id="recover-password-button" [disabled]="!form.get('email')!.valid">Przywróć hasło</button>
             </div>
         </form>
 
