--- a/src/app/pages/signin/signin.component.scss
+++ b/src/app/pages/signin/signin.component.scss
@@ -26,6 +26,21 @@
     align-items: center;
     justify-content: center;
     flex-flow: column wrap;
+    padding-top: 2rem;
+
+    @include xsm {
+        align-items: flex-start;
+    }
+
+    mat-form-field {
+        width: 90%;
+        margin-bottom: 8px;
+
+        @include xsm {
+            width: 94%;
+        }
+
+    }
 
     @include xsm {
         width: 90%;
@@ -52,12 +67,11 @@
     }
 
     &__btn-container {
-        padding-top: 40px;
         display: flex;
         align-items: center;
         justify-content: center;
         flex-flow: row nowrap;
-        gap: 2%;
+        gap: 4%;
 
         @include xsm {
             flex-flow: column wrap;
@@ -89,6 +103,13 @@
     font-size: 18px;
     font-weight: 400;
     cursor: pointer;
+
+    &:disabled,
+    &[disabled]{
+  border: 1px solid #999999;
+  background-color: #cccccc;
+  color: #666666;
+}
 
     &:hover {
         background-color: #fff;
